[package]

name = "rust-dpdk"
version = "0.0.1-dev"
authors = [ "Keunhong Lee <dlrmsghd@gmail.com>" ]

homepage = "https://github.com/ANLAB-KAIST/rust-dpdk"
repository = "https://github.com/ANLAB-KAIST/rust-dpdk"
documentation = "https://github.com/ANLAB-KAIST/rust-dpdk"
license = "BSD-3-Clause"
keywords = ["rust", "dpdk", "binding", "bindgen"]

description = """
Rust binding for Intel DPDK (under construction).
"""

[build-dependencies]
cc = "*"
bindgen = "0.47" # Test failed for 0.48 and 0.49
num_cpus = "1.0"
regex = "1"

[lib]
name = "dpdk"
path = "src/lib.rs"
